# Sentiment-Annotation-Tool

./: .env  .gitignore  README.md
backend/: pyproject.toml  run.py
backend/app/: main.py
client/api/: post.ts
client/app/post/: layout.tsx
client/app/post/[postID]/: page.tsx
client/styles/: globals.css  post.module.css
frontend/: next.config.js  package.json
frontend/api/: post.ts
frontend/app/: globals.css  head.tsx  layout.tsx  page.module.css  page.tsx
frontend/app/post/: Post.tsx  layout.tsx  page.tsx
frontend/app/post/[postID]/: CommentBody.tsx  loading.tsx  page.tsx
frontend/app/post/[post_id]/: layout.tsx  page.tsx
frontend/client/: CommentBody.tsx  PostSelect.tsx
frontend/styles/: home.module.css  post.module.css
server/: pyproject.toml
server/app/: main.py
